force-app/main/default/objects/General_Data_Master_Item__c/General_Data_Master_Item__c.object-meta.xml
<CustomObject>
    <label>General Data Master Item</label>
    <nameField>
        <label>General Data Master Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Data Master Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>