force-app/main/default/objects/General_Data_Master_Item__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>