force-app/main/default/objects/General_Data_Master_Item__c/fields/parent_id__c.field-meta.xml
<CustomField>
    <fullName>parent_id__c</fullName>
    <label>parent_id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>